2010-10-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.57 released.

        * Changed way Module::Load::Conditional loads so that
          it's not required to run Term::Menus


2010-10-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.56 released.

        * Added new ability to define result with anonymous
          subroutine - with macros in the subroutine. This
          new feature is not yet documented.


2010-09-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.55 released.

        * Fixed Bug #32350 for Term-Menus:
          Using &selected(]Selected[) does not always work
          - found bug in fix for 1.54


2010-09-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.54 released.

        * Fixed Bug #32350 for Term-Menus:
          Using &selected(]Selected[) does not always work

        * Improved Error reporting in certain routines


2010-09-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.53 released.

        * Added requires Module::Load::Conditional to
          Makefile.PL in attempt to clean up CPAN
          testers reports.


2010-09-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.52 released.

        * Using eval around GetTerminalSize so that CPAN
          Testers automated tests won't break (somehow this
          fix got overwritten from release 1.50)


2010-09-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.51 released.

        * Added can_load for files in Custom directory - if
          file doesn't exist, load Distro instead


2010-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.50 released.

        * Using eval around GetTerminalSize so that CPAN
          Testers automated tests won't break


2010-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.49 released.
