@@ -11,3 +11,15 @@ requires        'Module::Load::Conditional' => 0;
 requires        'Term::ReadKey'             => 0;    
 auto_install;
 WriteAll;
+
+package MY; # so that "SUPER" works right
+sub MY::distdir {
+
+   my $inherited = shift->SUPER::distdir(@_);
+
+   $inherited =~ s/^(distdir .*)$/$1 distsignature/m;
+
+   $inherited;
+
+}
+
