@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 b609e0354bbf3f21b1f98d6f2affb855d38923b0 ChangeLog
+SHA1 3c4a1dbd5d1b92dd9407b68fe1b55ec498234f21 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 c92f972afb954b93f772b3d47eef5092c7752cd5 META.yml
-SHA1 36a22b0dfbd3e5eb8134f748482d2711662b1a5f Makefile.PL
+SHA1 1aaaeb8bf1d5790fee8e1b1bad5dfee914a4d8fb META.yml
+SHA1 df15cac91cca52b6a2e582f9c64c5196e04bba71 Makefile.PL
 SHA1 9fe655575461fddba1c0bbea1ff20348ec9233a2 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
 SHA1 7305dbe2904416e28decb05396988a5d51d578be inc/Module/Install.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 ea3361af8445d3428dd0ea2c6e2c2561daf2719b lib/Term/Menus.pm
+SHA1 b2d4d79f9b77759d4bbee170eb599e0021ca2cff lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAkzBgioACgkQdsVAdUjO9IkphgCfRXaNrX2+SIBpaMYR+hUJOGlQ
-59IAniDJRE+nxX4BXyMJIdystG38TnVp
-=8IO9
+iEYEARECAAYFAkzv83gACgkQdsVAdUjO9ImL2wCcC2eJKUtkyeDsYGgp6zThEsKZ
+/2YAoJk0pEq2Mnf57UIvl/wqUzqAmc7s
+=6bK/
 -----END PGP SIGNATURE-----
